# cql-track

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  USAGE.md  cqltrack.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
cqltrack/: __init__.py  __main__.py  cli.py  config.py  differ.py  exceptions.py  linter.py  lock.py  migrator.py  parser.py  session.py
examples/: README.md  cli.md  django.md  fastapi.md  plain-python.md
examples/migrations/: V001__create_users_table.cql  V004__add_order_notes.cql  V005__dangerous_changes.cql
migrations/: V002__create_orders_table.cql  V003__add_phone_to_users.cql  V006__add_user_status.cql
tests/: test_api.py  test_differ.py  test_linter.py  test_parser.py
